# wwn_ssr

./: Cargo.toml  README.md  package-lock.json
backend/: Cargo.toml
backend/src/: fileserv.rs  main.rs
client/: Cargo.toml
client/src/: config.rs  lib.rs
client/src/components/: mod.rs
client/src/components/core/: footer.rs  frame.rs  header.rs  local_image.rs  mod.rs  nationrouting.rs  sidebar.rs
client/src/components/dynamic/: mod.rs  stations.rs
client/src/components/images/: local.rs
client/src/pages/: frontpage.rs  mod.rs  welcome.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
style/: main.scss
style/custom/: components.scss
wwn_definitions/: Cargo.toml
wwn_definitions/src/: defaults.rs  lib.rs  location.rs  mapping.rs  station.rs  timeseries.rs  timeseries_metadata.rs
