[package]
name = "wwn_definitions"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version =  "0.12.4", features = ["json"] }
chrono = { features = ["serde"], version = "0.4.34" }
itertools = "0.12.1"
phf = { features = ["macros"], version = "0.11.2", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.6.1"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.57"
log = "0.4.21"

